2011-01-10  Eric Seidel  <eric@webkit.org>

        Reviewed by Ojan Vafai.

        style-queue messages are way too long for big patches
        https://bugs.webkit.org/show_bug.cgi?id=52161

        We definitely could build much fancier list-to-string-with-limit functions
        but this should be sufficient for our needs at the moment.

        * Scripts/webkitpy/common/system/executive.py:
        * Scripts/webkitpy/common/system/executive_unittest.py:

2011-01-10  Tony Chang  <tony@chromium.org>

        Unreviewed, rolling out r75398.
        http://trac.webkit.org/changeset/75398
        https://bugs.webkit.org/show_bug.cgi?id=52008

        Some layout tests are crashing on Chromium Win.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::updatePaintRect):
        * DumpRenderTree/chromium/WebViewHost.h:

2011-01-10  Adam Roben  <aroben@apple.com>

        Roll out r75392

        It isn't needed now that r75289 has been rolled out.

        * Scripts/run-javascriptcore-tests:

2011-01-10  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        WebKitTestRunner uses crazy amounts of CPU, making layout tests slow and flaky
        https://bugs.webkit.org/show_bug.cgi?id=52160

        * WebKitTestRunner/mac/TestControllerMac.mm:
        (WTR::TestController::platformRunUntil): Instead of busy-looping, wait for the timeout.
        Anything that can make runUntil() conditions turn true will happen on a run loop cycle
        anyway.

2011-01-10  Tony Chang  <tony@chromium.org>

        Reviewed by Mihai Parparita.

        [chromium] fix for animated gif layout tests
        https://bugs.webkit.org/show_bug.cgi?id=52008

        * DumpRenderTree/chromium/WebViewHost.cpp: Schedule a paint when we update the paint rect
            to trigger gif animations.
        (WebViewHostPaintTask::WebViewHostPaintTask):
        (WebViewHostPaintTask::runIfValid):
        (WebViewHost::updatePaintRect):