@@ -118,7 +118,8 @@ void BrowserView::create(RECT webViewRect, BrowserWindow* parentWindow)
         0,          /* didDraw */
         0,          /* pageDidScroll */
         0,          /* exceededDatabaseQuota */
-        0           /* runOpenPanel */
+        0,          /* runOpenPanel */
+        0,          /* decidePolicyForGeolocationPermissionRequest */
     };
 
     WKPageSetPageUIClient(WKViewGetPage(m_webView), &uiClient);
